# azure-pipelines-cli

./: Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  install.ps1  install.sh
.cargo/: audit.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.build.yml  ci.install.yml  ci.release.yml  ci.security.yml  ci.yml  release.yml
benches/: render.rs
docs/: authentication.md  configuration.md  contributing.md  getting-started.md  install.md  keybindings.md  limitations.md  stability.md
scripts/: check-keybindings.sh  generate-sbom.py
src/: app.rs  config.rs  events.rs  lib.rs  main.rs  terminal.rs  test_helpers.rs  update.rs
src/api/: auth.rs  client.rs  endpoints.rs  models.rs
src/api/client/: approvals.rs  builds.rs  definitions.rs  retention.rs
src/api/endpoints/: approvals.rs  builds.rs  definitions.rs  retention.rs  web.rs
src/api/models/: approvals.rs  definitions.rs  mod.rs  retention.rs
src/app/: actions.rs  dashboard.rs  log_viewer.rs  messages.rs  mod.rs  nav.rs  notifications.rs  run.rs  settings.rs  timeline.rs
src/app/actions/: dispatch.rs  messages.rs  spawn.rs
src/app/log_viewer/: follow.rs  mod.rs  state.rs  timeline.rs
src/client/: api_version.rs  auth.rs  errors.rs  mod.rs  wiql.rs
src/client/endpoints/: approvals.rs  boards.rs  builds.rs  definitions.rs  mod.rs  pull_requests.rs  retention.rs  web.rs
src/client/http/: approvals.rs  boards.rs  builds.rs  definitions.rs  mod.rs  pull_requests.rs  retention.rs
src/client/models/: approvals.rs  boards.rs  builds.rs  definitions.rs  mod.rs  pull_requests.rs  retention.rs
src/components/: active_runs.rs  boards.rs  build_history.rs  dashboard.rs  header.rs  help.rs  log_viewer.rs  mod.rs  my_work_items.rs  pipelines.rs  pull_request_detail.rs  pull_requests.rs  settings.rs  work_item_detail.rs
src/components/log_viewer/: follow.rs  mod.rs  state.rs  timeline.rs
src/events/: active_runs.rs  boards.rs  build_history.rs  common.rs  dashboard.rs  log_viewer.rs  mod.rs  my_work_items.rs  navigation.rs  pins.rs  pipelines.rs  pull_request_detail.rs  pull_requests.rs  work_item_detail.rs
src/render/: columns.rs  helpers.rs  mod.rs  setup.rs  table.rs  theme.rs
src/shared/: availability.rs  concurrency.rs  log_buffer.rs  mod.rs  nav.rs  notifications.rs  refresh.rs  secret.rs
src/state/: effects.rs  messages.rs  mod.rs  nav.rs  notifications.rs  run.rs  settings.rs
src/state/actions/: dispatch.rs  messages.rs  mod.rs  spawn.rs
src/state/actions/reducers/: boards.rs  dashboard.rs  logs.rs  mod.rs  pipelines.rs  repos.rs  updates.rs
src/ui/: active_runs.rs  builds.rs  dashboard.rs  header.rs  help.rs  helpers.rs  leases.rs  logs.rs  mod.rs  pipelines.rs  settings.rs  setup.rs  theme.rs
tests/: events.rs  http_client.rs  http_failure_modes.rs  json_fixtures.rs  render_scale.rs  render_snapshots.rs  state_flow.rs
tests/fixtures/: approvals.json  builds.json  connection_data.json  definitions.json  log.txt  pull_request_threads.json  pull_requests.json  timeline.json
