[package]
name = "azure-pipelines-cli"
version = "1.0.0"
edition = "2024"
description = "A terminal dashboard for monitoring Azure DevOps pipelines"
repository = "https://github.com/ljtill/azure-pipelines-cli"
readme = "README.md"
rust-version = "1.85"

[[bin]]
name = "pipelines"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Azure auth
azure_identity = { version = "0.34", default-features = false, features = ["tokio"] }
azure_core = { version = "0.34", default-features = false, features = ["reqwest", "reqwest_deflate", "reqwest_gzip", "tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
