[package]
name = "azure-devops-cli"
version = "1.0.0"
edition = "2024"
description = "A terminal dashboard for Azure DevOps"
repository = "https://github.com/ljtill/azure-devops-cli"
readme = "README.md"
rust-version = "1.94"

[[bin]]
name = "devops"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs", "process"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Azure auth
azure_identity = { version = "=0.34.0", default-features = false, features = ["tokio"] }
azure_core = { version = "=0.34.0", default-features = false, features = ["reqwest", "reqwest_deflate", "reqwest_gzip", "tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

# Supply-chain verification
sigstore = { version = "0.13", default-features = false, features = ["verify", "sigstore-trust-root", "rustls-tls"] }
sha2 = "0.11"

# Unicode-aware width measurement for table/column layout.
unicode-width = "0.2"

# Secure zeroization of secret material on drop.
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Nursery lints worth enabling individually.
redundant_clone = "warn"
or_fun_call = "warn"
needless_collect = "warn"
option_if_let_else = "warn"

# Suppress noisy pedantic lints that don't fit this codebase.
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
items_after_statements = "allow"
